--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap Library CSS CDN go here -->
+    <!-- Tailwind Library CSS CDN go here -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Boostrap Library JS CDN  go here -->
 
     <!-- Other libraries go here -->
@@ -25,7 +26,30 @@
     <!-- Your HTML Layout go here -->
     <!------------------------------>
     <!-- Stuff for body goes here -->
-
+    <!-- Footer -->
+    <footer class="bg-white rounded-lg shadow dark:bg-[#2d58b1] fixed bottom-4 left-4 right-4">
+        <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+            <div class="sm:flex sm:items-center sm:justify-between">
+                <ul class="flex flex-wrap items-center mb-6 text-sm font-lg text-white sm:mb-0 dark:text-white">
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">About</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+            <span class="block text-sm text-slate-300 sm:text-center dark:text-slate-300">© 2024 <a
+                    href="https://flowbite.com/" class="hover:underline">DTC06 COMP1800</a>. All Rights Reserved.</span>
+        </div>
+    </footer>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
