Add comments to index for organizing

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 </head>
 
 <body>
-
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
-    <!------------------------------>
-    <!-- Stuff for body goes here -->
+    <!-- Nav bar 10% of screen-->
+    <nav></nav>
+    <!-- User info -->
+    <!-- Sign in button -->
+    <!-- Sign up -->
+    <!-- Lost password -->
     <!-- Footer -->
     <footer class="bg-white rounded-lg shadow dark:bg-[#2d58b1] fixed bottom-4 left-4 right-4">
         <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
