--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <!-- Tailwind Library CSS CDN go here -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Boostrap Library JS CDN  go here -->
-
     <!-- Other libraries go here -->
-
     <!-- Link to styles of your own -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
@@ -22,7 +20,12 @@
 
 <body>
     <!-- Nav bar 10% of screen-->
-    <nav></nav>
+    <nav class="bg-[#65EEFF] h-[15vh] w-full">
+        <div class="flex align-middle size-full">
+            <p class="">this is where our logo will go</p>
+        </div>
+    </nav>
+
     <!-- User info -->
     <!-- Sign in button -->
     <!-- Sign up -->
