--- a/index.html
+++ b/index.html
@@ -23,15 +23,67 @@
 <body>
     <!-- Nav bar 10% of screen-->
     <nav></nav>
-    <!-- User info -->
-    <!-- Sign in button -->
-    <!-- Sign up -->
-    <!-- Lost password -->
+    <!-- Welcome banner -->
+    <!-- User info form -->
+    <section>
+        <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+            <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
+                <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+                    <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
+                        Sign in to your account
+                    </h1>
+                    <form class="space-y-4 md:space-y-6" action="#">
+                        <!-- Email box -->
+                        <div>
+                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your
+                                email</label>
+                            <input type="email" name="email" id="email"
+                                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                placeholder="name@mail.com" required="">
+                        </div>
+                        <!-- Password box -->
+                        <div>
+                            <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Password</label>
+                            <input type="password" name="password" id="password" placeholder="••••••••"
+                                class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
+                                required="">
+                        </div>
+                        <div class="flex items-center justify-between">
+                            <!-- Remember me tick box-->
+                            <div class="flex items-start">
+                                <div class="flex items-center h-5">
+                                    <input id="remember" aria-describedby="remember" type="checkbox"
+                                        class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300"
+                                        required="">
+                                </div>
+                                <div class="ml-3 text-sm">
+                                    <label for="remember" class="text-gray-500">Remember me</label>
+                                </div>
+                            </div>
+                            <!-- Forgot password -->
+                            <a href="#" class="text-sm font-medium text-primary-600 hover:underline ">Forgot
+                                password?</a>
+                        </div>
+                        <!-- Sign in button -->
+                        <button type="submit"
+                            class="w-full text-white bg-[#2d58b1] hover:bg-[#172d58] focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5">Sign
+                            in</button>
+                        <!-- Create account button -->
+                        <p class="text-sm font-light text-gray-500">
+                            Don’t have an account yet? <a href="#"
+                                class="font-medium text-primary-600 hover:underline">Sign up</a>
+                        </p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
-    <footer class="bg-white rounded-lg shadow dark:bg-[#2d58b1] fixed bottom-4 left-4 right-4">
+    <footer class="bg-[#2d58b1] rounded-lg shadow fixed bottom-4 left-4 right-4">
         <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
             <div class="sm:flex sm:items-center sm:justify-between">
-                <ul class="flex flex-wrap items-center mb-6 text-sm font-lg text-white sm:mb-0 dark:text-white">
+                <ul class="flex flex-wrap items-center mb-6 text-sm font-lg text-white sm:mb-0">
                     <li>
                         <a href="#" class="hover:underline me-4 md:me-6">About</a>
                     </li>
@@ -46,9 +98,9 @@
                     </li>
                 </ul>
             </div>
-            <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-            <span class="block text-sm text-slate-300 sm:text-center dark:text-slate-300">© 2024 <a
-                    href="https://flowbite.com/" class="hover:underline">DTC06 COMP1800</a>. All Rights Reserved.</span>
+            <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
+            <span class="block text-sm text-slate-300 sm:text-center">© 2024 <a href="https://flowbite.com/"
+                    class="hover:underline">DTC06 COMP1800</a>. All Rights Reserved.</span>
         </div>
     </footer>
 
