--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body>
     <!-- Nav bar 10% of screen-->
-    <nav class="bg-[#65EEFF] h-[15vh] w-full">
-        <div class="flex align-middle size-full">
-            <p class="">this is where our logo will go</p>
+    <nav class="bg-[#2d58b1] h-[15vh] w-full">
+        <div class="inline-flex justify-center size-full">
+            <img class="object-center" src="./images/FitQuest Logo.svg" alt="">
         </div>
     </nav>
     <!-- Welcome banner -->
