--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
     <!-- Welcome banner -->
     <!-- User info form -->
     <section>
-        <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+        <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto h-screen lg:py-0">
             <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
-                        Sign in to your account
+                        <p class="text-center">Welcome to FitQuest</p>
+                        <p>Sign into your account</p>
                     </h1>
                     <form class="space-y-4 md:space-y-6" action="#">
                         <!-- Email box -->
@@ -90,28 +91,26 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-[#2d58b1] rounded-lg shadow fixed bottom-4 left-4 right-4">
-        <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
-            <div class="sm:flex sm:items-center sm:justify-between">
-                <ul class="flex flex-wrap items-center mb-6 text-sm font-lg text-white sm:mb-0">
-                    <li>
-                        <a href="#" class="hover:underline me-4 md:me-6">About</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
-            <span class="block text-sm text-slate-300 sm:text-center">© 2024 <a href="https://flowbite.com/"
-                    class="hover:underline">DTC06 COMP1800</a>. All Rights Reserved.</span>
+    <footer class="bg-[#2d58b1] w-full p-4 sm:sticky bottom-0">
+        <div class="sm:flex sm:items-center sm:justify-between">
+            <ul class="flex flex-wrap items-center mb-6 text-sm font-lg text-white sm:mb-0">
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">About</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">Contact</a>
+                </li>
+            </ul>
         </div>
+        <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
+        <span class="block text-sm text-slate-300 sm:text-center">© 2024 <a href="https://flowbite.com/"
+                class="hover:underline">DTC06 COMP1800</a>. All Rights Reserved.</span>
     </footer>
 
     <!---------------------------------------------->
@@ -120,7 +119,6 @@
 
     <!-- Link to scripts of your own -->
     <!-- <script src="./scripts/script.js"></script> -->
-
 </body>
 
 </html>
