--- a/index.html
+++ b/index.html
@@ -91,26 +91,28 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-[#2d58b1] w-full p-4 sm:sticky bottom-0">
-        <div class="sm:flex sm:items-center sm:justify-between">
-            <ul class="flex flex-wrap items-center mb-6 text-sm font-lg text-white sm:mb-0">
-                <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">About</a>
-                </li>
-                <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-                </li>
-                <li>
-                    <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-                </li>
-                <li>
-                    <a href="#" class="hover:underline">Contact</a>
-                </li>
-            </ul>
+    <footer class="bg-[#2d58b1] shadow m-0">
+        <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+            <div class="sm:flex sm:items-center sm:justify-between">
+                <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-white sm:mb-0 ">
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">About</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                    </li>
+                    <li>
+                        <a href="#" class="hover:underline">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <hr class="my-6 border-gray-200 sm:mx-autolg:my-8" />
+            <span class="block text-sm text-slate-300 sm:text-center">© 2024 <a href="#" class="hover:underline">DTC06
+                    COMP1800</a>. All Rights Reserved.</span>
         </div>
-        <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
-        <span class="block text-sm text-slate-300 sm:text-center">© 2024 <a href="https://flowbite.com/"
-                class="hover:underline">DTC06 COMP1800</a>. All Rights Reserved.</span>
     </footer>
 
     <!---------------------------------------------->
