--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Nav bar 10% of screen-->
-    <nav class="bg-[#2d58b1] h-[12vh] w-full">
+    <nav class="bg-[#2d58b1] h-[12vh] w-full sticky top-0">
         <div class="inline-flex justify-center size-full">
             <img class="object-center" src="./images/FitQuest Logo.svg" alt="">
         </div>
@@ -91,7 +91,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-[#2d58b1] shadow m-0">
+    <footer class="bg-[#2d58b1] shadow m-0 sticky bottom-0">
         <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
             <div class="sm:flex sm:items-center sm:justify-between">
                 <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-white sm:mb-0 ">
