--- a/nav bars/general_nav_bottom.html
+++ b/nav bars/general_nav_bottom.html
@@ -11,74 +11,59 @@
 </head>
 
 <body>
-  <div
-    class="fixed z-50 w-full h-16 max-w-lg -translate-x-1/2 bg-[#fff9e1] border border-[#2d58b1] rounded-full bottom-4 left-1/2 shadow-lg">
-    <div class="grid h-full max-w-lg grid-cols-4 mx-auto">
+  <!-- Bottom Navigation Bar -->
+  <nav class="fixed w-full bottom-0 h-10 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
+    <div class="flex justify-between items-center px-4 py-2">
+      <!-- Home Icon -->
+      <button aria-label="Home">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home" width="24" height="24"
+          viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
+          <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
+          <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
+        </svg>
+      </button>
 
-      <button data-tooltip-target="tooltip-home" type="button"
-        class="inline-flex flex-col items-center justify-center px-5 rounded-s-full hover:bg-yellow-100">
-        <svg class="w-5 h-5 mb-1 text-gray-500 group-hover:text-blue-600" aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+      <!-- Plus Icon -->
+      <button aria-label="Add">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="24" height="24"
+          viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
+          <path d="M9 12h6" />
+          <path d="M12 9v6" />
+        </svg>
+      </button>
+
+      <!-- Settings Icon -->
+      <button aria-label="Settings">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="24" height="24"
+          viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
           <path
-            d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z" />
+            d="M10.325 4.317c.426 -1.756 2.924 -1.756 3.35 0a1.724 1.724 0 0 0 2.573 1.066c1.543 -.94 3.31 .826 2.37 2.37a1.724 1.724 0 0 0 1.065 2.572c1.756 .426 1.756 2.924 0 3.35a1.724 1.724 0 0 0 -1.066 2.573c.94 1.543 -.826 3.31 -2.37 2.37a1.724 1.724 0 0 0 -2.572 1.065c-.426 1.756 -2.924 1.756 -3.35 0a1.724 1.724 0 0 0 -2.573 -1.066c-1.543 .94 -3.31 -.826 -2.37 -2.37a1.724 1.724 0 0 0 -1.065 -2.572c-1.756 -.426 -1.756 -2.924 0 -3.35a1.724 1.724 0 0 0 1.066 -2.573c-.94 -1.543 .826 -3.31 2.37 -2.37c1 .608 2.296 .07 2.572 -1.065z" />
+          <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
         </svg>
-        <span class="sr-only">Home</span>
       </button>
-      <div id="tooltip-home" role="tooltip"
-        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip">
-        Home
-        <div class="tooltip-arrow" data-popper-arrow></div>
-      </div>
 
-      <div class="flex items-center justify-center">
-
-        <button data-tooltip-target="tooltip-new" type="button"
-          class="inline-flex items-center justify-center w-10 h-10 font-medium bg-[#2d58b1] rounded-full hover:bg-blue-700 group focus:ring-4 focus:ring-blue-300 focus:outline-none">
-          <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-            viewBox="0 0 18 18">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M9 1v16M1 9h16" />
-          </svg>
-          <span class="sr-only">New item</span>
-        </button>
-      </div>
-      <div id="tooltip-new" role="tooltip"
-        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip">
-        Create new item
-        <div class="tooltip-arrow" data-popper-arrow></div>
-      </div>
-
-      <button data-tooltip-target="tooltip-settings" type="button"
-        class="inline-flex flex-col items-center justify-center px-5 hover:bg-yellow-100">
-        <svg class="w-5 h-5 mb-1 text-gray-500 group-hover:text-blue-600" aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M4 12.25V1m0 11.25a2.25 2.25 0 0 0 0 4.5m0-4.5a2.25 2.25 0 0 1 0 4.5M4 19v-2.25m6-13.5V1m0 2.25a2.25 2.25 0 0 0 0 4.5m0-4.5a2.25 2.25 0 0 1 0 4.5M10 19V7.75m6 4.5V1m0 11.25a2.25 2.25 0 1 0 0 4.5 2.25 2.25 0 0 0 0-4.5ZM16 19v-2" />
+      <!-- User Icon -->
+      <button aria-label="User">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-square-rounded" width="24"
+          height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M12 13a3 3 0 1 0 0 -6a3 3 0 0 0 0 6z" />
+          <path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" />
+          <path d="M6 20.05v-.05a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v.05" />
         </svg>
-        <span class="sr-only">Settings</span>
       </button>
-      <div id="tooltip-settings" role="tooltip"
-        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip">
-        Settings
-        <div class="tooltip-arrow" data-popper-arrow></div>
-      </div>
-
-      <button data-tooltip-target="tooltip-profile" type="button"
-        class="inline-flex flex-col items-center justify-center px-5 rounded-e-full hover:bg-yellow-100">
-        <svg class="w-5 h-5 mb-1 text-gray-500group-hover:text-blue-600" aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-          <path
-            d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm0 5a3 3 0 1 1 0 6 3 3 0 0 1 0-6Zm0 13a8.949 8.949 0 0 1-4.951-1.488A3.987 3.987 0 0 1 9 13h2a3.987 3.987 0 0 1 3.951 3.512A8.949 8.949 0 0 1 10 18Z" />
-        </svg>
-        <span class="sr-only">Profile</span>
-      </button>
-      <div id="tooltip-profile" role="tooltip"
-        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip">
-        Profile
-        <div class="tooltip-arrow" data-popper-arrow></div>
-      </div>
     </div>
-  </div>
+  </nav>
+
 
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
