Edit nav bar and js functions

--- a/nav bars/general_nav_bottom.html
+++ b/nav bars/general_nav_bottom.html
@@ -15,7 +15,7 @@
   <nav class="fixed w-full bottom-0 h-10 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
     <div class="flex justify-between items-center px-4 py-2">
       <!-- Home Icon -->
-      <button aria-label="Home">
+      <button id="home-btn" class="p-2" aria-label="Home">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home" width="24" height="24"
           viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
           stroke-linejoin="round">
@@ -27,7 +27,7 @@
       </button>
 
       <!-- Plus Icon -->
-      <button aria-label="Add">
+      <button id="plus-btn" class="p-2" aria-label="Add">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="24" height="24"
           viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
           stroke-linejoin="round">
@@ -39,7 +39,7 @@
       </button>
 
       <!-- Settings Icon -->
-      <button aria-label="Settings">
+      <button id="settings-btn" class="p-2" aria-label="Settings">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="24" height="24"
           viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
           stroke-linejoin="round">
@@ -51,7 +51,7 @@
       </button>
 
       <!-- User Icon -->
-      <button aria-label="User">
+      <button id="user-btn" class="p-2" aria-label="User">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-square-rounded" width="24"
           height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
           stroke-linejoin="round">
