--- a/nav bars/general_nav_top.html
+++ b/nav bars/general_nav_top.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-  <nav id="home_nav_top" class="bg-[#2d58b1]">
+  <nav id="home_nav_top" class="bg-[#2d58b1] rounded-b-xl ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
 
-      <button
-        class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-[#fff9e1] hover:text-yellow-100">
+      <button class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white hover:text-yellow-100">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-left" width="40" height="40"
           viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff9e1" fill="none" stroke-linecap="round"
           stroke-linejoin="round">
@@ -28,10 +27,10 @@
 
       <a href="#" class="flex items-center justify-center mx-auto">
         <img src="/images/FitQuest Logo.svg" class="h-8" alt="Logo" />
-        <span class="self-center text-2xl text-[#fff9e1] font-semibold whitespace-nowrap">FitQuest</span>
+        <span class="self-center text-2xl text-white font-semibold whitespace-nowrap">FitQuest</span>
       </a>
       <button data-collapse-toggle="navbar-hamburger" type="button"
-        class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white rounded-lg hover:bg-[#fff9e1] hover:text-[#2d58b1] focus:outline-none"
+        class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white rounded-lg hover:bg-white hover:text-[#2d58b1] focus:outline-none"
         aria-controls="navbar-hamburger" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
@@ -40,7 +39,7 @@
         </svg>
       </button>
       <div class="hidden w-full" id="navbar-hamburger">
-        <ul class="flex flex-col font-medium mt-4 rounded-lg bg-[#fff9e1]">
+        <ul class="flex flex-col font-medium mt-4 rounded-lg bg-white">
           <li>
             <a href="#" class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]"
               aria-current="page">Home</a>
