--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
                     <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
                         <p class="text-center">Welcome to FitQuest</p>
                         <p class="text-center">Sign into your account</p>
-                    </h1>
                     <form class="space-y-4 md:space-y-6" action="#">
                         <!-- Email box -->
                         <div>
-                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your
-                                email</label>
+                            <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Your email</label>
                             <input type="email" name="email" id="email"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
                                 placeholder="name@mail.com" required="">
