--- a/navbars/general_nav_top.html
+++ b/navbars/general_nav_top.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav id="home_nav_top" class="bg-[#2d58b1] rounded-b-xl ">
+  <nav id="general-top-nav" class="bg-[#2d58b1] rounded-b-xl ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
 
       <button class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white hover:text-yellow-100">
