--- a/navbars/general_nav_bottom.html
+++ b/navbars/general_nav_bottom.html
@@ -12,7 +12,7 @@
 
 <body>
   <!-- Bottom Navigation Bar -->
-  <nav class="fixed w-full bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
+  <nav id="general-bottom-nav" class="fixed w-full bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
     <div class="flex justify-between items-center px-4 py-2">
       <!-- Home Icon -->
       <button id="home-btn" class="p-2" aria-label="Home">
