--- a/overview.html
+++ b/overview.html
@@ -72,25 +72,25 @@
 
     <main>
         <!-- dougnut graph -->
-        <div class="max-w-sm w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
+        <div class="max-w-sm w-full bg-white rounded-lg shadow p-4 md:p-6">
             <div class="flex justify-between mb-3">
                 <div class="flex justify-center items-center">
-                    <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white pe-1">Today's Overview</h5>
+                    <h5 class="text-xl font-bold leading-none text-gray-900 pe-1">Today's Overview</h5>
                     <svg data-popover-target="chart-info" data-popover-placement="bottom"
-                        class="w-3.5 h-3.5 text-gray-500 dark:text-gray-400 hover:text-gray-900 dark:hover:text-white cursor-pointer ms-1"
-                        aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                        class="w-3.5 h-3.5 text-gray-500 hover:text-gray-900 cursor-pointer ms-1" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                         <path
                             d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm0 16a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm1-5.034V12a1 1 0 0 1-2 0v-1.418a1 1 0 0 1 1.038-.999 1.436 1.436 0 0 0 1.488-1.441 1.501 1.501 0 1 0-3-.116.986.986 0 0 1-1.037.961 1 1 0 0 1-.96-1.037A3.5 3.5 0 1 1 11 11.466Z" />
                     </svg>
                     <div data-popover id="chart-info" role="tooltip"
-                        class="absolute z-10 invisible inline-block text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 w-72 dark:bg-gray-800 dark:border-gray-600 dark:text-gray-400">
+                        class="absolute z-10 invisible inline-block text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 w-72">
                         <div class="p-3 space-y-2">
-                            <h3 class="font-semibold text-gray-900 dark:text-white">Today's Overview</h3>
+                            <h3 class="font-semibold text-gray-900">Today's Overview</h3>
                             <p>hi</p>
-                            <h3 class="font-semibold text-gray-900 dark:text-white">Calculation</h3>
+                            <h3 class="font-semibold text-gray-900">Calculation</h3>
                             <p>bye</p>
                             <a href="#"
-                                class="flex items-center font-medium text-blue-600 dark:text-blue-500 dark:hover:text-blue-600 hover:text-blue-700 hover:underline">Read
+                                class="flex items-center font-medium text-blue-600 hover:text-blue-700 hover:underline">Read
                                 more <svg class="w-2 h-2 ms-1.5 rtl:rotate-180" aria-hidden="true"
                                     xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -102,7 +102,7 @@
                 </div>
                 <div>
                     <button type="button" data-tooltip-target="data-tooltip" data-tooltip-placement="bottom"
-                        class="hidden sm:inline-flex items-center justify-center text-gray-500 w-8 h-8 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm"><svg
+                        class="hidden sm:inline-flex items-center justify-center text-gray-500 w-8 h-8 hover:bg-gray-100 focus:outline-none focus:ring-4 focus:ring-gray-200 rounded-lg text-sm"><svg
                             class="w-3.5 h-3.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 16 18">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -110,7 +110,7 @@
                         </svg><span class="sr-only">Download data</span>
                     </button>
                     <div id="data-tooltip" role="tooltip"
-                        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
+                        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip">
                         Download CSV
                         <div class="tooltip-arrow" data-popper-arrow></div>
                     </div>
@@ -121,33 +121,31 @@
                 <div class="flex" id="devices">
                     <div class="flex items-center me-4">
                         <input id="desktop" type="checkbox" value="desktop"
-                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
                         <label for="desktop"
                             class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">General</label>
                     </div>
                     <div class="flex items-center me-4">
                         <input id="tablet" type="checkbox" value="tablet"
-                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                        <label for="tablet"
-                            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Excersize</label>
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
+                        <label for="tablet" class="ms-2 text-sm font-medium text-gray-900">Excersize</label>
                     </div>
                     <div class="flex items-center me-4">
                         <input id="mobile" type="checkbox" value="mobile"
-                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-                        <label for="mobile"
-                            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Calories/Nutrition</label>
+                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
+                        <label for="mobile" class="ms-2 text-sm font-medium text-gray-900">Calories/Nutrition</label>
                     </div>
                 </div>
             </div>
 
             <!-- Donut Chart -->
             <div class="py-6" id="donut-chart"></div>
-            <div class="grid grid-cols-1 items-center border-gray-200 border-t dark:border-gray-700 justify-between">
+            <div class="grid grid-cols-1 items-center border-gray-200 border-t justify-between">
                 <div class="flex justify-between items-center pt-5">
                     <!-- Button -->
                     <button id="dropdownDefaultButton" data-dropdown-toggle="lastDaysdropdown"
                         data-dropdown-placement="bottom"
-                        class="text-sm font-medium text-gray-500 dark:text-gray-400 hover:text-gray-900 text-center inline-flex items-center dark:hover:text-white"
+                        class="text-sm font-medium text-gray-500 hover:text-gray-900 text-center inline-flex items-center"
                         type="button">
                         Last 7 days
                         <svg class="w-2.5 m-2.5 ms-1.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -157,36 +155,30 @@
                         </svg>
                     </button>
                     <div id="lastDaysdropdown"
-                        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
-                        <ul class="py-2 text-sm text-gray-700 dark:text-gray-200"
-                            aria-labelledby="dropdownDefaultButton">
+                        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44">
+                        <ul class="py-2 text-sm text-gray-700" aria-labelledby="dropdownDefaultButton">
                             <li>
-                                <a href="#"
-                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Yesterday</a>
+                                <a href="#" class="block px-4 py-2 hover:bg-gray-100">Yesterday</a>
                             </li>
                             <li>
-                                <a href="#"
-                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Today</a>
+                                <a href="#" class="block px-4 py-2 hover:bg-gray-100">Today</a>
                             </li>
                             <li>
-                                <a href="#"
-                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Last
+                                <a href="#" class="block px-4 py-2 hover:bg-gray-100">Last
                                     3 days</a>
                             </li>
                             <li>
-                                <a href="#"
-                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Last
+                                <a href="#" class="block px-4 py-2 hover:bg-gray-100">Last
                                     7 days</a>
                             </li>
                             <li>
-                                <a href="#"
-                                    class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Last
+                                <a href="#" class="block px-4 py-2 hover:bg-gray-100">Last
                                     30 days</a>
                             </li>
                         </ul>
                     </div>
                     <a href="#"
-                        class="uppercase text-sm font-semibold inline-flex items-center rounded-lg text-blue-600 hover:text-blue-700 dark:hover:text-blue-500  hover:bg-gray-100 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 px-3 py-2">
+                        class="uppercase text-sm font-semibold inline-flex items-center rounded-lg text-blue-600 hover:text-blue-700 dark:hover:text-blue-500  hover:bg-gray-100 px-3 py-2">
                         Generate Report
                         <svg class="w-2.5 h-2.5 ms-1.5 rtl:rotate-180" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
@@ -215,7 +207,7 @@
             </div>
             <div class="px-3 hidden" id="cardContent">
                 <div class="">
-                    <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white pe-1 pl-4 pb-2">Exercise
+                    <h5 class="text-xl font-bold leading-none text-gray-900 pe-1 pl-4 pb-2">Exercise
                     </h5>
                     <canvas id="myChart" class="size-auto"></canvas>
                 </div>
@@ -245,7 +237,7 @@
             </div>
             <div class="px-3 hidden" id="cardContent">
                 <div class="">
-                    <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white pe-1 pl-4 pb-2">Exercise
+                    <h5 class="text-xl font-bold leading-none text-gray-900 pe-1 pl-4 pb-2">Exercise
                     </h5>
                     <canvas id="myChart" class="size-auto"></canvas>
                 </div>
