Add main code to recipe page

--- a/navbars/general_nav_bottom.html
+++ b/navbars/general_nav_bottom.html
@@ -12,7 +12,7 @@
 
 <body>
   <!-- Bottom Navigation Bar -->
-  <nav id="general-bottom-nav" class="fixed w-full bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
+  <footer id="general-bottom-nav" class="fixed w-full bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
     <div class="flex justify-between items-center px-4 py-2">
       <!-- Home Icon -->
       <button id="home-btn" class="p-2" aria-label="Home">
@@ -25,7 +25,6 @@
           <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
         </svg>
       </button>
-
       <!-- Plus Icon -->
       <button id="plus-btn" class="p-2" aria-label="Add">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="24" height="24"
@@ -37,7 +36,6 @@
           <path d="M12 9v6" />
         </svg>
       </button>
-
       <!-- Settings Icon -->
       <button id="settings-btn" class="p-2" aria-label="Settings">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-settings" width="24" height="24"
@@ -49,7 +47,6 @@
           <path d="M9 12a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" />
         </svg>
       </button>
-
       <!-- User Icon -->
       <button id="user-btn" class="p-2" aria-label="User">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-square-rounded" width="24"
@@ -62,7 +59,7 @@
         </svg>
       </button>
     </div>
-  </nav>
+  </footer>
 
 
   <!---------------------------------------------->
