Start firebase database linking

--- a/reciples.html
+++ b/reciples.html
@@ -62,7 +62,7 @@
             </div>
         </div>
     </nav>
-
+<!-- have to link the firebase database to this and then make the graphs work with them. -->
     <main class="">
         <!-- avatar -->
 
