Finish category conatiner in recipes page

--- a/reciples.html
+++ b/reciples.html
@@ -62,8 +62,8 @@
             </div>
         </div>
     </nav>
-<!-- have to link the firebase database to this and then make the graphs work with them. -->
-    <main class="">
+    <!-- have to link the firebase database to this and then make the graphs work with them. -->
+    <main class="overflow-hidden">
         <!-- avatar -->
 
         <div>
@@ -76,40 +76,31 @@
                     </path>
                 </svg>
             </div>
-            <h1 class="text-center p-3 font-sans font-bold">Matt</h1>
+            <h1 class="text-center p-3 font-sans font-bold text-2xl">Matt's Recipes</h1>
         </div>
         <!-- recipe categories -->
-        <div class="flex flex-col items-center gap-2">
-            <!-- Breakfast -->
-            <div class="overflow-hidden rounded-lg bg-white shadow w-3/4 p-4 jus">
-                <div class="px-4 py-5 sm:p-6">
-                    <!-- Content goes here -->
-                </div>
+        <!-- Breakfast -->
+        <div
+            class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full my-5 sm:px-6 lg:px-8">
+            <div class="text-center">
+                <p class="text-lg md:text-xl font-semibold">Breakfast</p>
+                <!-- Adjust font size and weight for "Breakfast" -->
+                <p class="text-sm">xx Entries</p> <!-- Smaller font size for "xx Entries" -->
             </div>
-            <!-- Lunch -->
-            <div class="overflow-hidden rounded-lg bg-white shadow">
-                <div class="px-4 py-5 sm:p-6">
-                    <!-- Content goes here -->
-                </div>
-            </div>
-            <!-- Dinner -->
-            <div class="overflow-hidden rounded-lg bg-white shadow">
-                <div class="px-4 py-5 sm:p-6">
-                    <!-- Content goes here -->
-                </div>
-            </div>
-            <!-- Snacks -->
-            <div class="overflow-hidden rounded-lg bg-white shadow">
-                <div class="px-4 py-5 sm:p-6">
-                    <!-- Content goes here -->
-                </div>
-            </div>
-            <!-- Create Your own -->
-            <div class="overflow-hidden rounded-lg bg-white shadow">
-                <div class="px-4 py-5 sm:p-6">
-                    <!-- Content goes here -->
-                </div>
-            </div>
+        </div>
+        <!-- Lunch -->
+        <div class="container mx-auto h-24 rounded-full sm:px-6 lg:px-8">
+        </div>
+        <!-- Dinner -->
+        <div class="container mx-auto h-24 rounded-full sm:px-6 lg:px-8">
+        </div>
+        <!-- Snacks -->
+        <div class="container mx-auto h-24 rounded-full sm:px-6 lg:px-8">
+        </div>
+        <!-- Create Your own -->
+        <div class="container mx-auto h-24 rounded-full sm:px-6 lg:px-8">
+        </div>
+        </div>
         </div>
 
     </main>
