--- a/signup.html
+++ b/signup.html
@@ -55,7 +55,7 @@
                                     name</label>
                                 <input type="text" name="name" id="signup-name"
                                     class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5"
-                                    placeholder="Last Name  First Name" required="">
+                                    placeholder="Name" required="">
                             </div>
 
                             <!-- Password box -->
