Start individual recipe page and js for recipe name

--- a/toast.html
+++ b/toast.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+    <title>Toast</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="../scripts/general_nav_bottom.js"></script>
 </head>
@@ -63,7 +63,11 @@
         </div>
     </nav>
     <!-- have to link the firebase database to this and then make the graphs work with them. -->
-  
+  <main>
+    <div class="p-4 flex flex-col items-center">
+        <input type="text" id="recipeNameInput" placeholder="Enter Your Recipe Name" class="text-3xl p-2 border-2 border-gray-300 rounded mt-4 mb-2 w-full max-w-md">
+    </div>
+  </main>
 
     <!-- Footer Navigation Bar -->
     <footer id="general-bottom-nav" class="fixed w-full bottom-0 bg-[#2d58b1] text-[#fffff] rounded-t-xl">
