Add js code for search bar and placeholder div

--- a/breakfast.html
+++ b/breakfast.html
@@ -91,8 +91,8 @@
                 <span class="sr-only">Search</span>
             </button>
         </form>
-        <!-- recipes -->
-        <div class="flex w-full mx-auto border-2 border-gray-300 shadow-md rounded-full mt-2 mb-5 p-4 text-center">
+        <!-- this is the place holder cards for the recipes recipes -->
+        <!-- <div class="flex w-full mx-auto border-2 border-gray-300 shadow-md rounded-full mt-2 mb-5 p-4 text-center">
             <div class="w-3/4">
                 <p class="text-3xl font-bold mb-2">Toast</p>
                 <p class="text-sm text-gray-500">0g Protein | 0g Carb | 0g Fat</p>
@@ -100,6 +100,16 @@
             <div class="flex items-center">
                 <p class="text-gray-800 text-lg font-semibold">1000</p>
                 <img src="/images/kcal_icon.svg" alt="" class="size-20">
+            </div>
+        </div> -->
+        <!-- container to store recipe categories and with create your own button at the end -->
+        <div id="recipes-container">
+            <!-- Create Your own -->
+            <div id="create-recipe"
+                class="flex flex-col mx-auto h-24 justify-center items-center border-2 border-gray-300 shadow-md rounded-full my-5 sm:px-6 lg:px-8">
+                <div class="text-center">
+                    <p class="text-xl font-semibold">Create Add another Recipe.</p>
+                </div>
             </div>
         </div>
     </main>
