finish each category page

--- a/new_recipe.html
+++ b/new_recipe.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body>
+<body class="overflow-auto" style="height: calc(100vh - 112px);">
   <!-- Top Nav bar -->
   <nav id="general-top-nav" class="bg-[#2d58b1] rounded-b-xl ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
