Start new_recipe page html

--- a/my_recipes.html
+++ b/my_recipes.html
@@ -151,6 +151,8 @@
     <!---------------------------------------------->
 
     <!-- Link to scripts of your own -->
+    <script src="scripts/user_info.js"></script>
+    <script src="scripts/home_nav_top_hamburger.js"></script>
     <script src="../scripts/general_nav_bottom.js"></script>
     <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="scripts/my_recipes.js"></script>
