--- a/new_recipe.html
+++ b/new_recipe.html
@@ -14,7 +14,7 @@
   <!-------------------------------------------------------->
   <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
   <!-------------------------------------------------------->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
@@ -81,18 +81,13 @@
   </nav>
 
   <!-- Main Content -->
-  <div class="md:flex md:items-center md:justify-between">
-    <h1 class="text-center p-3 font-sans font-bold text-2xl"><span id="recipeName"></span></h1>
-    <!-- this is gonna appear when you click on the name so you can edit it. have to java script it  -->
-    <!-- <div class="">
-      <label for="large-input" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Large input</label>
-      <input type="text" id="large-input"
-        class="block w-full p-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 text-base focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-    </div>
-    <div class="mt-4 flex justify-end">
-      <button type="button" class="mr-4 inline-flex items-center rounded-md bg-indigo-600 px-5 py-3 text-md font-semibold text-white shadow-sm hover:bg-indigo-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
-    </div> -->
+<main>
+  <div class="text-center py-4">
+    <h1 id="recipeName" class="text-3xl font-bold"></h1>
   </div>
+
+  div
+</main>
 
 
   <!-- Bottom Navigation Bar -->
@@ -149,10 +144,11 @@
   <!---------------------------------------------->
   <!-- Your own JavaScript functions go here    -->
   <!---------------------------------------------->
-  <script src="scripts/firebaseAPI_TEAMDTC06.js"></script>
-  <script src="scripts/user_info.js"></script>
-  <script src="scripts/home_nav_top_hamburger.js"></script>
-  <script src="scripts/general_nav_bottom.js"></script>
+    <script src="scripts/user_info.js"></script>
+    <script src="scripts/home_nav_top_hamburger.js"></script>
+    <script src="../scripts/general_nav_bottom.js"></script>
+    <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
+    <script src="scripts/new_recipe.js"></script>
 
 </body>
 
