Code replacement as the whole file

--- a/each_category.html
+++ b/each_category.html
@@ -35,19 +35,17 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <script src="https://cdn.tailwindcss.com"></script>
-    <<<<<<< HEAD <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-        <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 
-        =======
-        <script src="../scripts/general_nav_bottom.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
-        <script src="scripts/each_category.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        >>>>>>> d2ae6309950fb830055ffc3044e18195a1938b00
+    <script src="../scripts/general_nav_bottom.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+    <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
+    <script src="scripts/each_category.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
